--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
     width: 100%;
 }
 
-/* Property Form */
+/* Property Listing Form */
 #property-form {
     position: fixed;
     top: 50%;
